# booster_sdk

./: .gitignore  BOOSTER_DDS_REFERENCE.md  Cargo.toml  DDS.md  README.md  pixi.toml
.github/workflows/: build_wheels.yml  checks_rust.yml  python_checks.yml  release.yml
booster_sdk/: Cargo.toml
booster_sdk/examples/: gripper_control.rs  locomotion_control.rs  look_around.rs  low_state_subscriber.rs  x5_camera_rpc_check.rs
booster_sdk/src/: lib.rs
booster_sdk/src/client/: ai.rs  ai_client.rs  audio.rs  commands.rs  light_control.rs  light_control_client.rs  loco.rs  loco_client.rs  mod.rs  util.rs  vision.rs  vision_client.rs  x5_camera.rs  x5_camera_client.rs
booster_sdk/src/dds/: messages.rs  node.rs  qos.rs  rpc.rs  topics.rs
booster_sdk/src/types/: b1.rs  error.rs  low_level.rs  mod.rs  motor.rs  robot.rs
booster_sdk_py/: Cargo.toml  pyproject.toml
booster_sdk_py/booster_sdk/: __init__.py  client.py  types.py
booster_sdk_py/booster_sdk/client/: __init__.py  ai.py  audio.py  booster.py  light_control.py  lui.py  vision.py  x5_camera.py
booster_sdk_py/booster_sdk_bindings/: __init__.py  booster_sdk_bindings.pyi
booster_sdk_py/src/: lib.rs
booster_sdk_py/src/client/: ai.rs  audio.rs  booster.rs  light_control.rs  lui.rs  mod.rs  vision.rs  x5_camera.rs
crates/booster_client/: Cargo.toml
crates/booster_client/examples/: gripper_control.rs  locomotion_control.rs
crates/booster_client/src/: commands.rs  lib.rs  loco_client.rs
crates/booster_dds/: Cargo.toml
crates/booster_dds/src/: lib.rs  rpc.rs
crates/booster_types/: Cargo.toml
crates/booster_types/src/: lib.rs  low_level.rs  motor.rs  robot.rs
docs/: dds_setup.md
examples/: device_gateway_subscriber.py  gripper_control.rs  locomotion_control.py  low_state_subscriber.py
examples/python/: locomotion.py  look_around.py
examples/rust/locomotion/: Cargo.toml
examples/rust/locomotion/src/: main.rs
examples/rust/look_around/: Cargo.toml
examples/rust/look_around/src/: main.rs
scripts/ci/: checks_rust.py
src/dds/: mod.rs  rpc.rs
src/types/: spatial.rs
