[package]
name = "booster_sdk"
description = "An SDK for controlling Booster robots"
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Team whIRLwind"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IntelligentRobotics/booster_sdk"

[lints.rust]
# TODO: re-enable this once we have docs for everything
# missing_docs = "warn"

[lints.clippy]
# enable clippy lints with priority -1
# so that we can override certain ones with "allow"
all = { level = "warn", priority = -1 }
inline_always = "allow"
pedantic = { level = "warn", priority = -1 }

[dependencies]
tokio = { version = "1.42", features = ["full"] }
zenoh = { version = "1.0", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
typed-builder = "0.23.0"
glam = { version = "0.29", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
