[workspace]
members = ["booster_sdk", "booster_sdk_py", "examples/rust/*"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.12"
edition = "2024"
authors = ["Team whIRLwind"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IntelligentRoboticsLab/booster_sdk"
readme = "README.md"

[workspace.lints.rust]
# TODO: re-enable this once we have docs for everything
# missing_docs = "warn"

[workspace.lints.clippy]
# enable clippy lints with priority -1
# so that we can override certain ones with "allow"
all = { level = "warn", priority = -1 }
inline_always = "allow"
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
booster_sdk = { path = "booster_sdk" }

tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
rustdds = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
typed-builder = "0.23.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
pyo3 = { version = "0.27.1", features = ["extension-module"] }
